--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -397,21 +397,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\SettingsMapItem.cs" />
     <Compile Include="Issues\DirectXIssue.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemAlreadyConnectedException.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemBusAccessFailedException.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemBusNotFoundException.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemBusVersionMismatchException.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemCallbackAlreadyRegisteredException.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemCallbackNotFoundException.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemInvalidTargetException.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemNoFreeSlotException.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemRemovalFailedException.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemTargetNotPluggedInException.cs" />
-    <Compile Include="ViGEm\Client\Exceptions\VigemTargetUninitializedException.cs" />
-    <Compile Include="ViGEm\Client\Targets\DualShock4Controller.cs" />
-    <Compile Include="ViGEm\Client\Targets\DualShock4\DualShock4FeedbackReceivedEventArgs.cs" />
-    <Compile Include="ViGEm\Client\Targets\DualShock4\DualShock4Report.cs" />
-    <Compile Include="ViGEm\Client\Targets\DualShock4\LightbarColor.cs" />
+    <Compile Include="ViGEm\Client\ViGEmException.cs" />
     <Compile Include="ViGEm\Client\Targets\Xbox360Controller.cs" />
     <Compile Include="ViGEm\Client\Targets\Xbox360\Xbox360FeedbackReceivedEventArgs.cs" />
     <Compile Include="ViGEm\Client\Targets\Xbox360\Xbox360Report.cs" />
@@ -419,6 +405,7 @@
     <Compile Include="ViGEm\Client\ViGEmClient.Native.cs" />
     <Compile Include="ViGEm\Client\ViGEmClient.x360ce.cs" />
     <Compile Include="ViGEm\Client\ViGEmTarget.cs" />
+    <Compile Include="ViGEm\Client\VIGEM_ERROR.cs" />
     <EmbeddedResource Include="Controls\AboutControl.resx">
       <DependentUpon>AboutControl.cs</DependentUpon>
       <SubType>Designer</SubType>
