Fixed serialization and XInput crash handling bug.

--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Common\CloudItem.cs" />
     <Compile Include="Common\CloudState.cs" />
     <Compile Include="Common\DeadZoneControlsLink.cs" />
+    <Compile Include="Common\DInput\DInputEventArgs.cs" />
     <Compile Include="Common\DInput\DInputHelper.cs" />
     <Compile Include="Common\DInput\DInputHelper.Step1.UpdateDevices.cs" />
     <Compile Include="Common\DInput\DInputHelper.Step2.UpdateDiStates.cs" />
