--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Common\Enum\MapToMask.cs" />
     <Compile Include="Common\Enum\XInputMask.cs" />
     <Compile Include="Common\EngineHelper.cs" />
+    <Compile Include="Common\ForceFeedbackState.cs" />
     <Compile Include="Common\GameDatabaseManager.cs" />
     <Compile Include="Common\IChecksum.cs" />
     <Compile Include="Common\IDateTime.cs" />
