Hid Guardian implementation added. Not tested yet. Devices, with proper Device ID, can be hidden by simply unchecking checkbox on grid on [Devices] tab.

--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -408,6 +408,7 @@
     <Compile Include="ViGEm\Client\ViGEmClient.x360ce.cs" />
     <Compile Include="ViGEm\Client\ViGEmTarget.cs" />
     <Compile Include="ViGEm\Client\Enums\VIGEM_ERROR.cs" />
+    <Compile Include="ViGEm\HidGuardianHelper.cs" />
     <EmbeddedResource Include="Controls\AboutControl.resx">
       <DependentUpon>AboutControl.cs</DependentUpon>
       <SubType>Designer</SubType>
