--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -608,11 +608,11 @@
     <Content Include="Forms\MessageBoxFormImages\MessageBoxIcon_Warning.ico" />
     <Content Include="Forms\MessageBoxFormImages\MessageBoxIcon_Warning_32x32.png" />
     <EmbeddedResource Include="Resources\HidGuardian\x64\devcon.exe" />
+    <EmbeddedResource Include="Resources\HidGuardian\x64\x64\WdfCoinstaller01009.dll" />
+    <EmbeddedResource Include="Resources\HidGuardian\x86\x86\WdfCoinstaller01009.dll" />
     <EmbeddedResource Include="Resources\HidGuardian\x64\HidGuardian.inf" />
-    <EmbeddedResource Include="Resources\HidGuardian\x64\WdfCoinstaller01009.dll" />
     <EmbeddedResource Include="Resources\HidGuardian\x86\devcon.exe" />
     <EmbeddedResource Include="Resources\HidGuardian\x86\HidGuardian.inf" />
-    <EmbeddedResource Include="Resources\HidGuardian\x86\WdfCoinstaller01009.dll" />
     <EmbeddedResource Include="Resources\ViGEmClient\x64\ViGEmClient.dll" />
     <EmbeddedResource Include="Resources\ViGEmClient\x86\ViGEmClient.dll" />
     <EmbeddedResource Include="Resources\ViGEmBus\x64\devcon.exe" />
@@ -638,11 +638,11 @@
     <EmbeddedResource Include="Resources\SharpDX\SharpDX.dll" />
     <None Include="Resources\HidGuardian\ViGEm-HidGuardian.url" />
     <EmbeddedResource Include="Resources\HidGuardian\x64\hidguardian.cat" />
-    <EmbeddedResource Include="Resources\HidGuardian\x64\HidGuardian.sys" />
     <EmbeddedResource Include="Resources\HidGuardian\x64\HidGuardian_Setup.bat" />
     <EmbeddedResource Include="Resources\HidGuardian\x86\hidguardian.cat" />
-    <EmbeddedResource Include="Resources\HidGuardian\x86\HidGuardian.sys" />
     <EmbeddedResource Include="Resources\HidGuardian\x86\HidGuardian_Setup.bat" />
+    <EmbeddedResource Include="Resources\HidGuardian\x64\x64\HidGuardian.sys" />
+    <EmbeddedResource Include="Resources\HidGuardian\x86\x86\HidGuardian.sys" />
     <None Include="Resources\SharpDX\SharpDX.xml">
       <SubType>Designer</SubType>
     </None>
