Fixed bugs with permissions, issues and installers. Reverted HidGuardian back to 1.x version.

--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -140,6 +140,7 @@
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="SharpDX">
@@ -537,6 +538,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Resources\HidGuardian\x64\devcon.exe" />
+    <EmbeddedResource Include="Resources\HidGuardian\x64\hidguardian.cat" />
+    <EmbeddedResource Include="Resources\HidGuardian\x64\HidGuardian.inf" />
+    <EmbeddedResource Include="Resources\HidGuardian\x64\HidGuardian.sys" />
+    <EmbeddedResource Include="Resources\HidGuardian\x64\HidGuardian_Setup.bat" />
+    <EmbeddedResource Include="Resources\HidGuardian\x64\WdfCoinstaller01009.dll" />
     <EmbeddedResource Include="Resources\x360ce_Games.xml.gz" />
     <EmbeddedResource Include="Resources\ViGEmBus\x64\vigembus.cat" />
     <EmbeddedResource Include="Resources\ViGEmBus\x64\ViGEmBus.sys" />
@@ -611,12 +618,9 @@
     <Content Include="Forms\MessageBoxFormImages\MessageBoxIcon_Question_32x32.png" />
     <Content Include="Forms\MessageBoxFormImages\MessageBoxIcon_Warning.ico" />
     <Content Include="Forms\MessageBoxFormImages\MessageBoxIcon_Warning_32x32.png" />
-    <EmbeddedResource Include="Resources\HidGuardian\x64\devcon.exe" />
-    <EmbeddedResource Include="Resources\HidGuardian\x64\x64\WdfCoinstaller01009.dll" />
-    <EmbeddedResource Include="Resources\HidGuardian\x86\x86\WdfCoinstaller01009.dll" />
-    <EmbeddedResource Include="Resources\HidGuardian\x64\HidGuardian.inf" />
     <EmbeddedResource Include="Resources\HidGuardian\x86\devcon.exe" />
     <EmbeddedResource Include="Resources\HidGuardian\x86\HidGuardian.inf" />
+    <EmbeddedResource Include="Resources\HidGuardian\x86\WdfCoinstaller01009.dll" />
     <EmbeddedResource Include="Resources\ViGEmClient\x64\ViGEmClient.dll" />
     <EmbeddedResource Include="Resources\ViGEmClient\x86\ViGEmClient.dll" />
     <EmbeddedResource Include="Resources\ViGEmBus\x64\devcon.exe" />
@@ -641,12 +645,9 @@
     <EmbeddedResource Include="Resources\SharpDX\SharpDX.DirectInput.dll" />
     <EmbeddedResource Include="Resources\SharpDX\SharpDX.dll" />
     <None Include="Resources\HidGuardian\ViGEm-HidGuardian.url" />
-    <EmbeddedResource Include="Resources\HidGuardian\x64\hidguardian.cat" />
-    <EmbeddedResource Include="Resources\HidGuardian\x64\HidGuardian_Setup.bat" />
+    <EmbeddedResource Include="Resources\HidGuardian\x86\HidGuardian.sys" />
     <EmbeddedResource Include="Resources\HidGuardian\x86\hidguardian.cat" />
     <EmbeddedResource Include="Resources\HidGuardian\x86\HidGuardian_Setup.bat" />
-    <EmbeddedResource Include="Resources\HidGuardian\x64\x64\HidGuardian.sys" />
-    <EmbeddedResource Include="Resources\HidGuardian\x86\x86\HidGuardian.sys" />
     <None Include="Resources\SharpDX\SharpDX.xml">
       <SubType>Designer</SubType>
     </None>
