Fixing XInput library loading/unloading (Part 2).

--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Common\DInput\DInputHelper.Step3.UpdateXiStates.cs" />
     <Compile Include="Common\DInput\DInputHelper.Step5.VirtualDevices.cs" />
     <Compile Include="Common\DInput\DInputHelper.Step6.RetrieveXiStates.cs" />
+    <Compile Include="Common\DInput\DInputHelper.XInputLibrarry.cs" />
     <Compile Include="Common\DInput\Recorder.cs" />
     <Compile Include="Common\DInput\VirtualDriverInstaller.cs" />
     <Compile Include="Common\DInput\VirtualError.cs" />
