Add network availability check for cloud options.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -249,6 +249,7 @@
     <Compile Include="JocysCom\Mail\SmtpClientEx.cs" />
     <Compile Include="JocysCom\Mail\UserToken.cs" />
     <Compile Include="JocysCom\Mail\WebMail.cs" />
+    <Compile Include="JocysCom\Network\NetStatInfo.cs" />
     <Compile Include="JocysCom\Processes\BaseHook.cs" />
     <Compile Include="JocysCom\Processes\CURSORINFO.cs" />
     <Compile Include="JocysCom\Processes\HookType.cs" />
