Fixes for mouse mapping and controls. Fixing cloud features.

--- a/x360ce.Web/x360ce.Web.csproj
+++ b/x360ce.Web/x360ce.Web.csproj
@@ -142,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\DatabaseHelper.cs" />
+    <Compile Include="Common\DatabaseHelper.Settings.cs" />
     <Compile Include="Common\DatabaseHelper.UserComputers.cs" />
     <Compile Include="Common\DatabaseHelper.UserDevice.cs" />
     <Compile Include="Common\DatabaseHelper.UserGame.cs" />
