--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Data\Program.cs" />
     <Compile Include="Data\UserDevice.cs" />
     <Compile Include="Data\UserInstance.cs" />
+    <Compile Include="Data\UserProfile.cs" />
     <Compile Include="Data\Vendor.cs" />
     <Compile Include="Data\x360ceModel.Designer.cs">
       <AutoGen>True</AutoGen>
